# SuperSpaceNeo

./: .gitignore  CMakeLists.txt  Cargo.toml  Note.md  README.md  SuperSpaceNeo.cpp  SuperSpaceNeo.h  flow.md
run/BuildTool/: BuildIt.ps1  BuildIt.sh
src/: CMakeLists.txt  SuperSpaceNeo.cpp  main.rs
src/include/qt/SuperSpaceNeo/: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp
src/lib/rust_fileFunc/: Cargo.toml
src/lib/rust_fileFunc/src/: main.rs
src/lib/rust_fileFunc/src/file/: mod.rs
src/main/: main.cpp  main.h
src/rust/cpp/ffi/rust_fileFunc/: ffi.hpp
src/rust/rust_fileFunc/: Cargo.toml
src/rust/rust_fileFunc/src/: lib.rs
src/rust/rust_fileFunc/src/ffi/: mod.rs
src/rust/rust_fileFunc/src/open_file/: mod.rs
src/test/: CMakeLists.txt  testSSN.cpp  testSSN.h
src/test/include/: define_display_word.h  display_tip.h
src/test/testFF/: testFF.cpp  testFF.h
test/: CMakeLists.txt  testSSN.cpp
